[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/Character Selection/bg.png" type="Texture" id=1]
[ext_resource path="res://UI/Character Selection/BingChilling_Selected.png" type="Texture" id=2]
[ext_resource path="res://UI/Character Selection/Mike_Selected.png" type="Texture" id=3]
[ext_resource path="res://Control.gd" type="Script" id=4]
[ext_resource path="res://UI/Character Selection/Smiley Face_Selected.png" type="Texture" id=5]
[ext_resource path="res://UI/Character Selection/Smiley Face.png" type="Texture" id=6]
[ext_resource path="res://UI/Character Selection/BingChilling.png" type="Texture" id=7]
[ext_resource path="res://UI/Character Selection/mike.png" type="Texture" id=8]
[ext_resource path="res://Sfx/Menu + Gameplay/Character Select Gremlin.mp3" type="AudioStream" id=9]
[ext_resource path="res://Sfx/Menu + Gameplay/Character Select Bing Chilling.mp3" type="AudioStream" id=10]
[ext_resource path="res://Sfx/Menu + Gameplay/Character Select Smiley Face.mp3" type="AudioStream" id=11]

[node name="Character" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="bc_selected" type="Button" parent="."]
margin_left = 34.0
margin_top = 160.0
margin_right = 312.0
margin_bottom = 508.0

[node name="bc" type="Button" parent="bc_selected"]
margin_left = 6.0
margin_top = -18.0
margin_right = 284.0
margin_bottom = 364.0

[node name="mike_selected" type="Button" parent="."]
margin_left = 704.0
margin_top = 153.0
margin_right = 999.0
margin_bottom = 505.0

[node name="mike" type="Button" parent="mike_selected"]
margin_left = 13.0
margin_top = -21.0
margin_right = 285.0
margin_bottom = 352.0

[node name="sf_selected" type="Button" parent="."]
margin_left = 372.0
margin_top = 164.0
margin_right = 652.0
margin_bottom = 514.0

[node name="sf" type="Button" parent="sf_selected"]
anchor_left = -1.325
anchor_top = -0.488
anchor_right = -1.325
anchor_bottom = -0.488
margin_left = 365.0
margin_top = 144.8
margin_right = 631.0
margin_bottom = 514.8

[node name="Bg" type="TouchScreenButton" parent="."]
position = Vector2( -3, -8 )
scale = Vector2( 0.6425, 0.473437 )
normal = ExtResource( 1 )

[node name="BingChillingSelected" type="TouchScreenButton" parent="."]
position = Vector2( -9, -21 )
scale = Vector2( 0.628125, 0.628125 )
normal = ExtResource( 2 )

[node name="BingChilling" type="Sprite" parent="BingChillingSelected"]
position = Vector2( 799.204, 641.592 )
scale = Vector2( 0.996269, 0.996269 )
texture = ExtResource( 7 )

[node name="MikeSelected" type="Sprite" parent="."]
position = Vector2( 849.031, 375.375 )
scale = Vector2( 0.672461, 0.672461 )
texture = ExtResource( 3 )

[node name="Mike" type="Sprite" parent="MikeSelected"]
position = Vector2( -1.53357, 2.4165 )
scale = Vector2( 0.999129, 0.999129 )
texture = ExtResource( 8 )

[node name="SmileyFaceSelected" type="TouchScreenButton" parent="."]
position = Vector2( -333, -32 )
scale = Vector2( 0.646094, 0.646094 )
normal = ExtResource( 5 )

[node name="SmileyFace" type="Sprite" parent="SmileyFaceSelected"]
position = Vector2( 792.454, 633.035 )
scale = Vector2( 1.03628, 1.03628 )
texture = ExtResource( 6 )

[node name="mike_select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="sf_select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="bc_select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="pressed" from="bc_selected" to="." method="_on_bc_selected_pressed"]
[connection signal="pressed" from="bc_selected/bc" to="." method="_on_bc_pressed"]
[connection signal="pressed" from="mike_selected" to="." method="_on_mike_selected_pressed"]
[connection signal="pressed" from="mike_selected/mike" to="." method="_on_mike_pressed"]
[connection signal="pressed" from="sf_selected" to="." method="_on_sf_selected_pressed"]
[connection signal="pressed" from="sf_selected/sf" to="." method="_on_sf_pressed"]
